- reimplemented SnnsR__genericPredictCurrPatSet and parts of SnnsR__createPatSet in C++, to get general speed-ups.
- fixed handling of the target variable in DLVQ. Was only working for numeric values starting from 0. Now converting to factor
- added outputActFunc as a parameter to mlp()

version 0.4-7 (05-06-2015):

- fixed a problem occurring with pruned networks, that order of units was not preserved, so that predictions given were wrong (columns changed)
- put NeuralNetTools in suggests field and now mentioning it in the documentation

version 0.4-6 (22-12-2014):

- fixing more memory access issues, discovered by valgrind
- included a bugfix by Tamer Rizk from github, slightly modified
- fixed some "dangling else" warnings
- fixed warnings for misuse of abs() function for floating point values; fabs has to be used in that case
- removed @S3method keywords to fix warnings in roxygen2-4
- now using R's random number generator instead of the system's one

version 0.4-5 (22-05-2014):

- fixing memory access issues, discovered by valgrind and AddressSanitizer
- actually freeing memory now in the destructor
- switch to roxygen2
- elman, jordan: shufflePatterns is now FALSE by default; also changes this in the low-level demo
- included changes of Vitalie Spinu from github
- changed in demos using iris the shuffling to: 
  irisShuffled <- iris[sample(nrow(iris)),]
- fixed bug in iris demo: plotRegressionError was called with targets and fits the wrong way around
- mentioned javaNNS in the documentation
- mentioned the "plot.nnet" function in the documentation
- added some missing wrappers to make pruning work, and included pruning into the mlp function, 
  and two demos for pruning (with the help of Max Greene)
- added imports for methods and Rcpp to NAMESPACE, to comply to new CRAN rules
- fixes for "-Wformat-security", to comply to CRAN rules

version 0.4-4 (04-12-2013):

- fixing a bug for solaris

version 0.4-3 (09-1-2012):
