@@ -38,9 +38,9 @@
 SnnsR__initializeNet <- function(snnsObject, parameterInArray, initFunc) {
   
   if(!missing(initFunc)) {
-    .Call("SnnsCLib__setInitialisationFunc", snnsObject@variables$snnsCLibPointer, initFunc, package="RSNNS")
+    .Call("SnnsCLib__setInitialisationFunc", snnsObject@variables$snnsCLibPointer, initFunc, PACKAGE="RSNNS")
   }
-  err <- .Call("SnnsCLib__initializeNet", snnsObject@variables$snnsCLibPointer, parameterInArray, package="RSNNS")
+  err <- .Call("SnnsCLib__initializeNet", snnsObject@variables$snnsCLibPointer, parameterInArray, PACKAGE="RSNNS")
   err
 }
 
@@ -79,6 +79,6 @@ SnnsR__setUnitDefaults <- function(snnsObject, act, bias, st, subnet_no, layer_n
   }
     
   err <- .Call("SnnsCLib__setUnitDefaults", snnsObject@variables$snnsCLibPointer, act, bias, st, subnet_no, layer_no, 
-      act_func, out_func, package="RSNNS")
+      act_func, out_func, PACKAGE="RSNNS")
   err
 }
